--- a/templates/base.html
+++ b/templates/base.html
@@ -13,12 +13,7 @@
 {% include 'navbar.html' %}
 {% block content %} {% endblock %}
 
-{#<footer class="text-center text-lg-end" style="background-color: lightskyblue; display: block;">#}
-{#    <div class="container d-flex justify-content-center py-1">#}
-{#        <br><br>#}
-{#        <p style="font-style: oblique">Made by Alex Vucina</p>#}
-{#    </div>#}
-{#</footer>#}
+
 
 <style>
 .footer {
@@ -27,7 +22,7 @@
   bottom: 0;
   width: 100%;
   background-color: skyblue;
-  color: red;
+  color: purple;
   text-align: center;
 }
 </style>
