--- a/templates/student/details_student.html
+++ b/templates/student/details_student.html
@@ -11,7 +11,7 @@
                     <div class="card-header">
                        Details about the student: {{ student }}
                     </div>
-                    <div class="card-body">
+                    <div class="card-body"  style="width: 100%">
                         <h5 class="card-title">{{ student }}</h5>
                         <p class="card-text">Email address: {{ student.email }}</p>
                         <a href="{% url 'list-of-students' %}" class="btn btn-secondary">Go back</a>
