--- a/templates/teacher/list_of_teachers.html
+++ b/templates/teacher/list_of_teachers.html
@@ -12,7 +12,7 @@
                         <h3>Filters</h3>
                     </div>
                     <form method="get">
-                        <div class="card-body">
+                        <div class="card-body" style="width: 100%">
                             {{ my_filter.as_p }}
                         </div>
                         <div class="card-footer text-center">
