--- a/templates/parent/delete_parent.html
+++ b/templates/parent/delete_parent.html
@@ -9,10 +9,10 @@
                 <div class="card">
                     <form method="post">
                         {% csrf_token %}
-                        <div class="card-body">
+                        <div class="card-body" style="width: 100%">
                             <h3 class="text-center"> Are you sure to delete? {{ parent.first_name }} {{ parent.last_name }}</h3>
                         </div>
-                        <div class="card-footer text-center">
+                        <div class="card-footer text-center" style="width: 100%">
                             <button type="submit" class="btn btn-success">Yes</button>
                             <a href="{% url 'list-of-parents' %}" class="btn btn-secondary">No</a>
                         </div>
