--- a/templates/parent/update_parent.html
+++ b/templates/parent/update_parent.html
@@ -13,10 +13,10 @@
 
                     <form method="post">
                         {% csrf_token %}
-                        <div class="card-body">
+                        <div class="card-body" style="width: 100%">
                             {{ form.as_p }}
                         </div>
-                        <div class="card-footer">
+                        <div class="card-footer" style="width: 100%">
                             <button type="submit" class="btn btn-success">Update</button>
                         </div>
                     </form>
