--- a/templates/student/create_student.html
+++ b/templates/student/create_student.html
@@ -2,21 +2,21 @@
 {% block title %} Create a new student {% endblock %}
 
 {% block content %}
-<div class="container-fluid">
+<div class="container-fluid" >
     <div class="row">
-        <div class="col-md-6 offset-md-3">
+        <div class="col-md-6 offset-md-3" >
             <br>
-            <div class="card">
+            <div class="card" >
                 <div class="card-header">
                     <h3 class="text-center">Create a new student</h3>
                 </div>
 
             <form method="post">
                 {% csrf_token %}
-                <div class="card-body">
+                <div class="card-body"  style="width: 100%">
                     {{ form.as_p }}
                 </div>
-                <div class="card-footer text-center">
+                <div class="card-footer text-center"  style="width: 100%">
                     <button type="submit" class="btn btn-primary">Save</button>
                 </div>
             </form>
