--- a/templates/student/delete_student.html
+++ b/templates/student/delete_student.html
@@ -8,13 +8,13 @@
         <div class="row">
             <div class="col-md-6 offset-md-3">
                     <br><br>
-                    <div class="card">
+                    <div class="card" style="width: 100%">
                         <form method="post">
                             {% csrf_token %}
-                            <div class="card-body">
+                            <div class="card-body" style="width: 100%">
                                 <h3 class="text-center">Are you sure to delete? {{ student.first_name }} {{ student.last_name }}?</h3>
                             </div>
-                            <div class="card-footer text-center">
+                            <div class="card-footer text-center" style="width: 100%">
                                 <button type="submit" class="btn btn-success">Yes</button>
                                 <a href="{% url 'list-of-students' %}" class="btn btn-secondary">No</a>
                             </div>
