--- a/templates/student/list_of_students.html
+++ b/templates/student/list_of_students.html
@@ -8,7 +8,7 @@
             <div class="col-md-4">
                 <br><br>
                 <div class="card">
-                    <div class="card-header">
+                    <div class="card-header" style="width:100%;">
                         <h3>Filters</h3>
                     </div>
                     <form method="get">
@@ -23,7 +23,7 @@
             </div>
             <div class="col-md-8">
                 {% if all_students %}
-                    <table class="table table-striped table-primary">
+                    <table class="table table-striped table-primary" style="width:100%;">
                         <thead>
                         <tr>
                             <br>
@@ -61,7 +61,7 @@
                                                 data-bs-toggle="dropdown" aria-expanded="false">
                                             Actions
                                         </button>
-                                        <ul class="dropdown-menu">
+                                        <ul class="dropdown-menu" style="width:100%;">
                                             {% if perms.student.update_student %}
                                                 <li><a class="dropdown-item"
                                                        href="{% url 'update-student' student.id %}">Update</a></li>
