--- a/templates/student/update_student.html
+++ b/templates/student/update_student.html
@@ -6,18 +6,18 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-6 offset-md-3">
-                <div class="card">
-                    <div class="card-header">
+                <div class="card" style="width:100%;">
+                    <div class="card-header" style="width:100%;">
                         <h3 class="text-center"> Update - {{ student }}</h3>
                     </div>
 
                     <form method="post">
                         {% csrf_token %}
-                        <div class="card-body">
+                        <div class="card-body" style="width: 100%">
                             {{ form.as_p }}
                         </div>
-                        <div class="card-footer">
-                            <button type="submit" class="btn btn-success">Update</button>
+                        <div class="card-footer" style="width:100%;">
+                            <button type="submit" class="btn btn-success" >Update</button>
                         </div>
                     </form>
                 </div>
