--- a/templates/teacher/create_teacher.html
+++ b/templates/teacher/create_teacher.html
@@ -13,10 +13,10 @@
 
             <form method="post">
                 {% csrf_token %}
-                <div class="card-body">
+                <div class="card-body" style="width: 100%">
                     {{ form.as_p }}
                 </div>
-                <div class="card-footer text-center">
+                <div class="card-footer text-center" style="width: 100%">
                     <button type="submit" class="btn btn-primary">Save</button>
                 </div>
             </form>
